# PluginFramework

./: .gitignore  CMakeLists.txt  Plugin.h  Plugin1.c  Plugin2.c  Plugin2.cpp  PluginFramework.cpp  PluginFramework.h  PluginTest.cpp  README.md
